chore: fix table display on Safari

--- a/src/routes/Table/Table.scss
+++ b/src/routes/Table/Table.scss
@@ -49,11 +49,15 @@
 
         &__candidate {
             font-weight: 800;
-            height: 20rem;
             padding: 1rem;
             text-align: left;
-            transform: translate(5rem, 1rem) + rotate(210deg);
-            writing-mode: vertical-lr;
+            transform: translate(1.5rem, 8rem) rotate(-45deg);
+            transform-origin: left center;
+            overflow: visible;
+            white-space: nowrap;
+            max-width: 3rem;
+            text-overflow: clip;
+            height: 18rem;
         }
 
         table {
@@ -96,6 +100,7 @@
             background: none;
             height: 24px;
             width: 24px;
+            margin: auto;
         }
 
         tbody {
